--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,19 @@
             <artifactId>jedis</artifactId>
             <version>3.1.0</version>
         </dependency>
-
+        <!--引入布隆过滤器java客户端依赖于redis.clients.jedis3.0.0-->
+        <!-- https://mvnrepository.com/artifact/com.redislabs/jrebloom -->
+        <dependency>
+            <groupId>com.redislabs</groupId>
+            <artifactId>jrebloom</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        <!--引入Json java客户端依赖于redis.clients.jedis3.0.0-->
+        <dependency>
+            <groupId>com.redislabs</groupId>
+            <artifactId>jrejson</artifactId>
+            <version>1.2.0</version>
+        </dependency>
         <!--引入junit-->
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
@@ -76,7 +88,11 @@
             <version>1.16.22</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.8.0</version>
+        </dependency>
 
     </dependencies>
 
